--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -162,6 +162,12 @@
 		<div id = "light" class="white_content">
 			<h5>Meal Entry Form</h5>
 			<!-- FOOD SEARCH FORM -->
+			<div id="autogenDialog">
+				<h5>Auto generate your meal?</h5>
+				<label><span class="rad"><input class ="mealType" type="radio" name="group1" id="yes_auto" value="yes_auto" checked><span class="m" >Yes</span></span></label>
+				<label><span class="rad" ><input type="radio" name="group1" id="no_auto" value="no_auto"><span class="m" >No</span></span></label>
+			</div>
+			
 			<div id="optionSelect">
 				<label><span class="rad"><input class ="mealType" type="radio" name="group1" id="addMeal" value="breakfast" checked><span class="m" >Add meal</span></span></label>
 				<label><span class="rad" ><input type="radio" name="group1" id="addWeight" value="lunch"><span class="m" >Add weight</span> </span></label>
