--- a/view/Calendar.html
+++ b/view/Calendar.html
@@ -165,17 +165,19 @@
 			<!-- FOOD SEARCH FORM -->
 			<div id="autogenDialog">
 				<h5>Auto generate your meal?</h5>
-				<label><span class="rad"><input class ="mealType" type="radio" name="group1" id="yes_auto" value="yes_auto" checked><span class="m" >Yes</span></span></label>
-				<label><span class="rad" ><input type="radio" name="group1" id="no_auto" value="no_auto"><span class="m" >No</span></span></label>
-				
+				<form>
+					<label><span class="rad"><input class ="mealType" type="radio" name="group1" id="yes_auto" value="yes_auto" checked><span class="m" >Yes</span></span></label>
+					<label><span class="rad" ><input type="radio" name="group1" id="no_auto" value="no_auto"><span class="m" >No</span></span></label>
+				</form>
 				<div id="next_autogenDialog" class="next"> Next </div>
 				
 			</div>
 			
 			<div id="optionSelect">
-				<label><span class="rad"><input class ="mealType" type="radio" name="group1" id="addMeal" value="breakfast" checked><span class="m" >Add meal</span></span></label>
-				<label><span class="rad" ><input type="radio" name="group1" id="addWeight" value="lunch"><span class="m" >Add weight</span></span></label>
-				
+				<form>
+					<label><span class="rad"><input class ="mealType" type="radio" name="group1" id="addMeal" value="addMeal" checked><span class="m" >Add meal</span></span></label>
+					<label><span class="rad" ><input type="radio" name="group1" id="addWeight" value="addWeight"><span class="m" >Add weight</span></span></label>
+				</form>
 				<div id="next_optionselect" class="next"> Next </div>
 				
 			</div>
